feat: upgrade dependencies